--- a/_vti_cnf/aboutme.htm
+++ b/_vti_cnf/aboutme.htm
@@ -1,20 +1,20 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|21 Oct 2019 11:46:05 -0000
+vti_timelastmodified:TR|21 Oct 2019 12:14:14 -0000
 vti_timecreated:TR|21 Oct 2019 11:45:53 -0000
 vti_title:SR|新建网页 1
 vti_extenderversion:SR|6.0.2.5516
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TR|21 Oct 2019 11:46:01 -0000
-vti_cacheddtm:TX|21 Oct 2019 11:46:05 -0000
-vti_filesize:IR|168
+vti_nexttolasttimemodified:TW|21 Oct 2019 11:46:05 -0000
+vti_shadowfiles:VX|_overlay/aboutme.htm_nav_ice000_hbtn.gif _derived/aboutme.htm_cmp_ice000_hbtn.gif
+vti_cacheddtm:TX|21 Oct 2019 12:14:14 -0000
+vti_filesize:IR|159
 vti_cachedtitle:SR|新建网页 1
 vti_cachedbodystyle:SR|<body>
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
-vti_shadowfiles:VX|_overlay/aboutme.htm_nav_ice000_hbtn.gif _derived/aboutme.htm_cmp_ice000_hbtn.gif
+vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
