--- a/_vti_cnf/index.html
+++ b/_vti_cnf/index.html
@@ -1,25 +1,24 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|21 Oct 2019 12:08:59 -0000
+vti_timelastmodified:TR|21 Oct 2019 12:13:51 -0000
 vti_timecreated:TR|21 Oct 2019 09:03:00 -0000
 vti_extenderversion:SR|6.0.2.5516
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|21 Oct 2019 12:08:19 -0000
+vti_nexttolasttimemodified:TW|21 Oct 2019 12:08:59 -0000
 vti_structuredtm:TR|21 Oct 2019 09:08:15 -0000
 vti_shadowfiles:VX|
-vti_cacheddtm:TX|21 Oct 2019 12:08:59 -0000
-vti_filesize:IR|1006
+vti_cacheddtm:TX|21 Oct 2019 12:13:51 -0000
+vti_filesize:IR|862
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|S|https://music.163.com/outchain/player
 vti_cachedsvcrellinks:VX|NSSS|https://music.163.com/outchain/player
 vti_cachedneedsrewrite:BR|true
 vti_cachedhasbots:BR|true
-vti_cachedhastheme:BR|true
+vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
 vti_botnavbits:SW|
 vti_botlinkbars:VW|S|sid:1001
-vti_botnavbarthemes:VR|zt
+vti_botnavbarthemes:VR|
 vti_botnavbarfeatures:VR|t s
-vti_themeaggregate:SR|edge 1011
 vti_charset:SR|gb2312
