--- a/Music.htm
+++ b/Music.htm
@@ -2,12 +2,113 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>新建网页 1</title>
+<title>来点音乐？</title>
 </head>
 
 <body>
 
-<p>&nbsp;</p>
+<p align="center"><span lang="zh-cn"><font face="Consolas" size="7">Bj2002</font></span></p>
+<hr>
+<p align="justify">
+<iframe width=100% height=60% src="https://music.163.com/outchain/player?type=0&id=2890541489&auto=1&height=430" name="I1" align="left">
+</iframe></p>
+<p class="MsoHeader" align="left" style="text-align:left;line-height:150%;
+    text-indent:2.28761e-039"><i>
+<span lang="EN-US" style="font-size:11.0pt;
+    mso-bidi-font-size:18.0pt;line-height:150%">The Right Path<o:p></o:p></span></i></p>
+<p class="MsoHeader" style="text-align:justify;text-justify:inter-ideograph;
+    text-indent:18.0pt;mso-char-indent-count:2.0;line-height:150%">
+<span style="mso-bidi-font-size:13.5pt;line-height:150%;font-family:宋体;
+    mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
+    宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin">然而我也不知道这里的</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%">Right</span><span style="mso-bidi-font-size:13.5pt;line-height:150%;font-family:宋体;
+    mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
+    宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin">指的是</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%">“</span><span style="mso-bidi-font-size:13.5pt;line-height:150%;font-family:宋体;
+    mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
+    宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin">右边</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%">”</span><span style="mso-bidi-font-size:13.5pt;line-height:150%;font-family:宋体;
+    mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
+    宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin">还是</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%">“</span><span style="mso-bidi-font-size:13.5pt;line-height:150%;font-family:宋体;
+    mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
+    宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin">正确</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%">”</span><span style="mso-bidi-font-size:13.5pt;line-height:150%;font-family:宋体;
+    mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
+    宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin">。似乎两个意思都合理。不过作为艺术，没有必要争论出来结果吧。初中时，每天回家都会听到</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%"><o:p></o:p></span></p>
+<p class="MsoHeader" style="line-height:150%">
+<span style="font-size:11.0pt;
+    mso-bidi-font-size:18.0pt;line-height:150%;font-family:宋体;mso-ascii-font-family:
+    Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:宋体;
+    mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin;mso-bidi-font-style:italic">《夜空中最亮的星》</span><span lang="EN-US" style="font-size:11.0pt;mso-bidi-font-size:18.0pt;line-height:
+    150%;mso-bidi-font-style:italic"><o:p></o:p></span></p>
+<p class="MsoHeader" style="text-indent:18.0pt;mso-char-indent-count:2.0;
+    line-height:150%">
+<span lang="EN-US" style="mso-bidi-font-size:13.5pt;
+    line-height:150%">“</span><span style="mso-bidi-font-size:13.5pt;
+    line-height:150%;font-family:宋体;mso-ascii-font-family:Calibri;mso-ascii-theme-font:
+    minor-latin;mso-fareast-font-family:宋体;mso-fareast-theme-font:minor-fareast;
+    mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin">多谢你如此精彩耀眼，做我平淡岁月里星辰。</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%">”<o:p></o:p></span></p>
+<p class="MsoHeader" style="mso-margin-top-alt:auto;mso-margin-bottom-alt:
+    auto;line-height:150%">
+<span style="font-size:11.0pt;mso-bidi-font-size:
+    18.0pt;line-height:150%;font-family:宋体;mso-ascii-font-family:Calibri;
+    mso-ascii-theme-font:minor-latin;mso-fareast-font-family:宋体;mso-fareast-theme-font:
+    minor-fareast;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin;
+    mso-bidi-font-style:italic">《清明雨上》</span><span lang="EN-US" style="font-size:
+    11.0pt;mso-bidi-font-size:18.0pt;line-height:150%;mso-bidi-font-style:italic"><o:p></o:p></span></p>
+<p class="MsoHeader" style="text-align:justify;text-justify:inter-ideograph;
+    text-indent:18.0pt;mso-char-indent-count:2.0;line-height:150%">
+<span style="mso-bidi-font-size:13.5pt;line-height:150%;font-family:宋体;
+    mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
+    宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin">一开始听的是纯音乐版本。整首歌很清澈透亮。特别是流水声处理地很好。</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%"><o:p></o:p></span></p>
+<p class="MsoHeader" style="text-align:justify;text-justify:inter-ideograph;
+    text-indent:18.0pt;mso-char-indent-count:2.0;line-height:150%">
+<span style="mso-bidi-font-size:13.5pt;line-height:150%;font-family:宋体;
+    mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
+    宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin">后来才知道有带歌词的版本。从这时了解了歌手许蒿。填词没有毁歌，这实属不易</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%"><o:p></o:p></span></p>
+<p class="MsoHeader" style="line-height:150%"><i>
+<span lang="EN-US" style="font-size:11.0pt;mso-bidi-font-size:18.0pt;line-height:150%">
+Summer</span></i><span lang="EN-US" style="font-size:11.0pt;mso-bidi-font-size:18.0pt;line-height:
+    150%;mso-bidi-font-style:italic">/</span><span style="font-size:11.0pt;
+    mso-bidi-font-size:18.0pt;line-height:150%;font-family:宋体;mso-ascii-font-family:
+    Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:宋体;
+    mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin;mso-bidi-font-style:italic">《夏恋》</span><span lang="EN-US" style="font-size:11.0pt;mso-bidi-font-size:18.0pt;line-height:
+    150%;mso-bidi-font-style:italic"><o:p></o:p></span></p>
+<p class="MsoHeader" style="text-indent:18.0pt;mso-char-indent-count:2.0;
+    line-height:150%">
+<span style="mso-bidi-font-size:13.5pt;line-height:150%;
+    font-family:宋体;mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;
+    mso-fareast-font-family:宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:
+    Calibri;mso-hansi-theme-font:minor-latin">旋律很轻快</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%"><o:p></o:p></span></p>
+<p class="MsoHeader" style="line-height:150%"><i>
+<span lang="EN-US" style="font-size:11.0pt;mso-bidi-font-size:18.0pt;line-height:150%">
+Here With You</span></i><span lang="EN-US" style="font-size:11.0pt;mso-bidi-font-size:
+    18.0pt;line-height:150%;mso-bidi-font-style:italic">/</span><span style="font-size:11.0pt;mso-bidi-font-size:18.0pt;line-height:150%;
+    font-family:宋体;mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;
+    mso-fareast-font-family:宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:
+    Calibri;mso-hansi-theme-font:minor-latin;mso-bidi-font-style:italic">《如约而至》</span><span lang="EN-US" style="font-size:11.0pt;mso-bidi-font-size:18.0pt;line-height:
+    150%;mso-bidi-font-style:italic"><o:p></o:p></span></p>
+<p class="MsoHeader" style="text-indent:18.0pt;mso-char-indent-count:2.0;
+    line-height:150%">
+<span style="mso-bidi-font-size:13.5pt;line-height:150%;
+    font-family:宋体;mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;
+    mso-fareast-font-family:宋体;mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:
+    Calibri;mso-hansi-theme-font:minor-latin">
+那些短暂的相遇，短暂的美好，会不会在心里埋下，长久的种子？我越来越相信，用爱来连接着人，一定会重逢。在某个时间，某个地点，某个我无法想象的形式。又或许在彼此的脑海，广袤的银河星海里，我们早已无数次电波冲撞，无数次，喜悦相逢</span><span style="mso-bidi-font-size: 13.5pt; line-height: 150%; mso-ascii-font-family: Calibri; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: 宋体; mso-fareast-theme-font: minor-fareast; mso-hansi-font-family: Calibri; mso-hansi-theme-font: minor-latin" lang="zh-cn">。</span></p>
+<p class="MsoHeader" align="right" style="text-align:right;text-indent:21.0pt;
+    mso-char-indent-count:2.0;line-height:150%">
+<span lang="EN-US" style="font-size:10.5pt;mso-bidi-font-size:18.0pt;line-height:150%;
+    mso-bidi-font-style:italic">——</span><span style="font-size:10.5pt;
+    mso-bidi-font-size:18.0pt;line-height:150%;font-family:宋体;mso-ascii-font-family:
+    Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:宋体;
+    mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
+    mso-hansi-theme-font:minor-latin;mso-bidi-font-style:italic">许嵩《如约而至》</span></p>
 
 </body>
 
