--- a/_vti_cnf/Music.htm
+++ b/_vti_cnf/Music.htm
@@ -1,17 +1,20 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|21 Oct 2019 12:14:05 -0000
+vti_timelastmodified:TR|21 Oct 2019 13:27:21 -0000
 vti_timecreated:TR|21 Oct 2019 11:46:14 -0000
-vti_title:SR|新建网页 1
+vti_title:SR|来点音乐？
 vti_extenderversion:SR|6.0.2.5516
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|21 Oct 2019 11:46:39 -0000
+vti_nexttolasttimemodified:TW|21 Oct 2019 13:26:54 -0000
 vti_shadowfiles:VX|_overlay/music.htm_nav_ice000_hbtn.gif _derived/music.htm_cmp_ice000_hbtn.gif
-vti_cacheddtm:TX|21 Oct 2019 11:46:39 -0000
-vti_filesize:IR|176
-vti_cachedtitle:SR|新建网页 1
+vti_thicketdir:SW|Music.files
+vti_cacheddtm:TX|21 Oct 2019 13:27:21 -0000
+vti_filesize:IR|10112
+vti_cachedtitle:SR|来点音乐？
 vti_cachedbodystyle:SR|<body>
+vti_cachedlinkinfo:VX|S|https://music.163.com/outchain/player
+vti_cachedsvcrellinks:VX|NSSS|https://music.163.com/outchain/player
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
