--- a/_vti_cnf/player2.htm
+++ b/_vti_cnf/player2.htm
@@ -1,14 +1,10 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|21 Oct 2019 12:50:25 -0000
-vti_timecreated:TR|21 Oct 2019 11:39:27 -0000
-vti_title:SR|网易云音乐
-vti_extenderversion:SR|6.0.2.5516
-vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|21 Oct 2019 12:01:43 -0000
-vti_cacheddtm:TX|21 Oct 2019 11:41:53 -0000
-vti_filesize:IR|5567
+vti_timelastmodified:TR|21 Oct 2019 13:10:06 -0000
+vti_timecreated:TR|21 Oct 2019 13:10:06 -0000
+vti_cacheddtm:TX|21 Oct 2019 13:10:06 -0000
+vti_filesize:IR|5463
 vti_cachedtitle:SR|网易云音乐
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|Q|base.css Q|outchain-player.css S|//s3.music.126.net/web/s/core_172d3506fd39688f1606102abb4500af.js S|//s3.music.126.net/web/s/pt_outchain_player_5437bf86a729640aabfd289f187b4d83.js
@@ -17,5 +13,7 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
-vti_charset:SR|utf-8
+vti_charset:SR|gb2312
+vti_title:SR|网易云音乐
+vti_extenderversion:SR|6.0.2.5516
+vti_backlinkinfo:VX|
