--- a/Music.htm
+++ b/Music.htm
@@ -1,17 +1,19 @@
 <html>
 
 <head>
+<title>Bj2002</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>来点音乐？</title>
 </head>
 
-<body>
+<body bgcolor="#CCFFCC">
 
-<p align="center"><span lang="zh-cn"><font face="Consolas" size="7">Bj2002</font></span></p>
-<hr>
+<p align="center"><font face="Consolas" size="7">来点音乐？</font></p>
+<p align="center"><font size="5" face="Consolas">
+<!--webbot bot="Navigation" S-Type="sequence" S-Orientation="horizontal" S-Rendering="graphics" B-Include-Home="FALSE" B-Include-Up="FALSE" U-Page="sid:1001" S-Theme="zt 0000" startspan --><nobr>[&nbsp;<a href="index.html" target="">Bj2002</a>&nbsp;]</nobr>  <nobr>[&nbsp;来点音乐&nbsp;]</nobr>  <nobr>[&nbsp;<a href="Friends.htm" target="">Dear&nbsp;My&nbsp;Friends</a>&nbsp;]</nobr><!--webbot bot="Navigation" i-checksum="36252" endspan --></font></p>
 <p align="justify">
-<iframe width=100% height=60% src="https://music.163.com/outchain/player?type=0&id=2890541489&auto=1&height=430" name="I1" align="left">
+<iframe width="100%" height=500px src="https://music.163.com/outchain/player?type=0&id=2890541489&auto=1&height=430" name="I1" align="left">
 </iframe></p>
+<div style="position: absolute; width: 100%; height: 503px; z-index: 1; left: 26px; top: 700px" id="layer1">
 <p class="MsoHeader" align="left" style="text-align:left;line-height:150%;
     text-indent:2.28761e-039"><i>
 <span lang="EN-US" style="font-size:11.0pt;
@@ -46,11 +48,10 @@
     150%;mso-bidi-font-style:italic"><o:p></o:p></span></p>
 <p class="MsoHeader" style="text-indent:18.0pt;mso-char-indent-count:2.0;
     line-height:150%">
-<span lang="EN-US" style="mso-bidi-font-size:13.5pt;
-    line-height:150%">“</span><span style="mso-bidi-font-size:13.5pt;
+<span style="mso-bidi-font-size: 13.5pt; line-height: 150%"><font face="宋体">“</font></span><span style="mso-bidi-font-size:13.5pt;
     line-height:150%;font-family:宋体;mso-ascii-font-family:Calibri;mso-ascii-theme-font:
     minor-latin;mso-fareast-font-family:宋体;mso-fareast-theme-font:minor-fareast;
-    mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin">多谢你如此精彩耀眼，做我平淡岁月里星辰。</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%">”<o:p></o:p></span></p>
+    mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin">多谢你如此精彩耀眼，做我平淡岁月里星辰。</span><span lang="EN-US" style="mso-bidi-font-size:13.5pt;line-height:150%"><font face="宋体">”</font><o:p></o:p></span></p>
 <p class="MsoHeader" style="mso-margin-top-alt:auto;mso-margin-bottom-alt:
     auto;line-height:150%">
 <span style="font-size:11.0pt;mso-bidi-font-size:
@@ -109,6 +110,8 @@ Here With You</span></i><span lang="EN-US" style="font-size:11.0pt;mso-bidi-font
     Calibri;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:宋体;
     mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Calibri;
     mso-hansi-theme-font:minor-latin;mso-bidi-font-style:italic">许嵩《如约而至》</span></p>
+
+	<p>&nbsp;</div>
 
 </body>
 
