--- a/_private/_vti_cnf/index.html
+++ b/_private/_vti_cnf/index.html
@@ -1,11 +1,13 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|21 Oct 2019 12:18:27 -0000
+vti_timelastmodified:TR|22 Oct 2019 03:35:14 -0000
 vti_timecreated:TR|21 Oct 2019 12:18:27 -0000
 vti_shadowfiles:VX|
-vti_cacheddtm:TX|21 Oct 2019 12:18:27 -0000
-vti_filesize:IR|872
+vti_extenderversion:SR|6.0.2.5516
+vti_backlinkinfo:VX|
+vti_cacheddtm:TX|22 Oct 2019 12:05:17 -0000
+vti_filesize:IR|1003
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|S|https://music.163.com/outchain/player
 vti_cachedsvcrellinks:VX|NSSS|https://music.163.com/outchain/player
@@ -15,8 +17,6 @@ vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
 vti_botnavbits:SW|
 vti_botlinkbars:VW|S|sid:1001
-vti_botnavbarthemes:VR|
+vti_botnavbarthemes:VR|zt
 vti_botnavbarfeatures:VR|t s
 vti_charset:SR|gb2312
-vti_extenderversion:SR|6.0.2.5516
-vti_backlinkinfo:VX|
