--- a/_private/index.html
+++ b/_private/index.html
@@ -8,7 +8,7 @@
 <p align="center"><span lang="zh-cn"><font face="Consolas" size="7">Bj2002</font></span></p>
 <hr>
 <p align="justify"><font size="5">
-<!--webbot bot="Navigation" S-Type="sequence" S-Orientation="horizontal" S-Rendering="graphics" B-Include-Home="FALSE" B-Include-Up="FALSE" U-Page="sid:1001" S-Theme="zt 0000" startspan --><nobr>[&nbsp;<a href="../Aboutme.htm" target="">关于我</a>&nbsp;]</nobr> <nobr>[&nbsp;<a href="../Music.htm" target="">来点音乐</a>&nbsp;]</nobr> <nobr>[&nbsp;<a href="../Photo.htm" target="">Dear&nbsp;My&nbsp;Friends</a>&nbsp;]</nobr><!--webbot bot="Navigation" i-checksum="35040" endspan --></font></p>
+<!--webbot bot="Navigation" S-Type="sequence" S-Orientation="horizontal" S-Rendering="graphics" B-Include-Home="FALSE" B-Include-Up="FALSE" U-Page="sid:1001" S-Theme="zt 0000" startspan --><nobr>[&nbsp;<a href="../index.html" target="">Bj2002</a>&nbsp;]</nobr> <a href="../Music.htm"><img src="../_derived/Music.htm_cmp_zt000_hbtn.gif" width="0" height="0" border="0" alt="来点音乐" align="middle"></a> <a href="../Friends.htm"><img src="../_derived/Friends.htm_cmp_zt000_hbtn.gif" width="0" height="0" border="0" alt="Dear My Friends" align="middle"></a><!--webbot bot="Navigation" i-checksum="53593" endspan --></font></p>
 <p>
 <iframe marginwidth="105" marginheight="0" width=344 height=520 src="https://music.163.com/outchain/player?type=0&id=2890541489&auto=1&height=430"></iframe>
 </p>
