--- a/_vti_cnf/Music.htm
+++ b/_vti_cnf/Music.htm
@@ -1,23 +1,27 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|21 Oct 2019 13:27:21 -0000
+vti_timelastmodified:TR|22 Oct 2019 12:10:00 -0000
 vti_timecreated:TR|21 Oct 2019 11:46:14 -0000
-vti_title:SR|来点音乐？
+vti_title:SR|Bj2002
 vti_extenderversion:SR|6.0.2.5516
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|21 Oct 2019 13:26:54 -0000
+vti_nexttolasttimemodified:TW|22 Oct 2019 12:09:21 -0000
 vti_shadowfiles:VX|_overlay/music.htm_nav_ice000_hbtn.gif _derived/music.htm_cmp_ice000_hbtn.gif
 vti_thicketdir:SW|Music.files
-vti_cacheddtm:TX|21 Oct 2019 13:27:21 -0000
-vti_filesize:IR|10112
-vti_cachedtitle:SR|来点音乐？
-vti_cachedbodystyle:SR|<body>
+vti_cacheddtm:TX|22 Oct 2019 12:10:00 -0000
+vti_filesize:IR|10780
+vti_cachedtitle:SR|Bj2002
+vti_cachedbodystyle:SR|<body bgcolor="#CCFFCC">
 vti_cachedlinkinfo:VX|S|https://music.163.com/outchain/player
 vti_cachedsvcrellinks:VX|NSSS|https://music.163.com/outchain/player
-vti_cachedneedsrewrite:BR|false
-vti_cachedhasbots:BR|false
+vti_cachedneedsrewrite:BR|true
+vti_cachedhasbots:BR|true
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
+vti_botnavbits:SW|
+vti_botlinkbars:VW|S|sid:1001
+vti_botnavbarthemes:VR|zt
+vti_botnavbarfeatures:VR|t s
 vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
 vti_charset:SR|utf-8
