--- a/_vti_cnf/player2.htm
+++ b/_vti_cnf/player2.htm
@@ -1,10 +1,14 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|21 Oct 2019 13:10:06 -0000
+vti_timelastmodified:TR|22 Oct 2019 11:33:36 -0000
 vti_timecreated:TR|21 Oct 2019 13:10:06 -0000
-vti_cacheddtm:TX|21 Oct 2019 13:10:06 -0000
-vti_filesize:IR|5463
+vti_title:SR|网易云音乐
+vti_extenderversion:SR|6.0.2.5516
+vti_backlinkinfo:VX|
+vti_nexttolasttimemodified:TW|22 Oct 2019 03:35:14 -0000
+vti_cacheddtm:TX|22 Oct 2019 03:35:14 -0000
+vti_filesize:IR|5612
 vti_cachedtitle:SR|网易云音乐
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|Q|base.css Q|outchain-player.css S|//s3.music.126.net/web/s/core_172d3506fd39688f1606102abb4500af.js S|//s3.music.126.net/web/s/pt_outchain_player_5437bf86a729640aabfd289f187b4d83.js
@@ -14,6 +18,3 @@ vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
 vti_charset:SR|gb2312
-vti_title:SR|网易云音乐
-vti_extenderversion:SR|6.0.2.5516
-vti_backlinkinfo:VX|
