--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <blockquote>
 	<div style="border-style:solid; border-width:1px; position: absolute; width: 100%; z-index: 1; left: 0px; top: 234px; right: 0px" id="SelfIntro" align="center">
 		<blockquote>
-			<p align="justify"><font face="Consolas" size="5">自2002年起至今一事无成。</font><img src="https://pic.cnblogs.com/avatar/1597937/20190209133647.png" alt="https://pic.cnblogs.com/avatar/1597937/20190209133647.png" align="right" width="219" height="214"></p>
+			<p align="justify"><font face="Consolas" size="5">自2002年起至今一事无成。<img border="0" src="Misaka_Mokoto.jpg" width="234" height="232" align="right"></font></p>
 			<p align="justify"><font size="5" face="Consolas">坐标山东-东营-SLYZ。</font></p>
 			<p align="justify"><font face="Consolas" size="5">B站咸鱼Up主，半退役OIer。</font></p>
 			<p align="justify"><font face="Consolas" size="5">平时喜欢<strike>唱、跳</strike>看番、知乎、网易云、大刘作品</font>。<font face="Consolas" size="5">梦想是女装。</font></p>
