--- a/Friends.htm
+++ b/Friends.htm
@@ -11,6 +11,10 @@
 <p align="center"><font size="5" face="Consolas">
 <!--webbot bot="Navigation" S-Type="sequence" S-Orientation="horizontal" S-Rendering="graphics" B-Include-Home="FALSE" B-Include-Up="FALSE" U-Page="sid:1001" S-Theme="zt 0000" startspan --><nobr>[&nbsp;<a href="index.html" target="">Bj2002</a>&nbsp;]</nobr>  <nobr>[&nbsp;<a href="Music.htm" target="">来点音乐</a>&nbsp;]</nobr>  <nobr>[&nbsp;Dear&nbsp;My&nbsp;Friends&nbsp;]</nobr><!--webbot bot="Navigation" i-checksum="8054" endspan --></font></p>
 <div style="position: absolute; width: 100%; height: 100px; z-index: 1; left: 29px; top: 145px" id="layer1">
+	<p align="justify"><font size="5" face="宋体">特别期待的动画电影《你好世界》</font></p>
+	<p align="justify">
+	<img id="imgPicture" src="https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0=baike272,5,5,272,90/sign=7058d4f55eda81cb5aeb8b9f330fbb73/4afbfbedab64034fa5c6fe07a0c379310a551da3.jpg" onload="imageResize()" style="visibility: visible; width: 595px; height: 842px; margin-top: 0px; display: inline-block;" url="https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike272%2C5%2C5%2C272%2C90/sign=7058d4f55eda81cb5aeb8b9f330fbb73/4afbfbedab64034fa5c6fe07a0c379310a551da3.jpg"></p>
+	<p align="justify">&nbsp;</p>
 	<p align="justify"><font size="4"><a href="SLYZ.pdf">【胜利一中2018级机房人物列传】</a></font></p>
 	<p align="justify">&nbsp;</p>
 	<p align="justify">录音笔是个好东西（发现远古录音的Bj2002）</p>
@@ -18,8 +22,7 @@
 	<img border="0" src="Friend1.jpg"></p>
 	<div>
 		<img src="731$27AXD[@)$Z}P)9]I~QL.jpg"> </div>
-	<p><img border="0" src="Friend2.jpg"></p>
-	<p>&nbsp;</div>
+	<p><img border="0" src="Friend2.jpg"></p></div>
 <p align="center">&nbsp;</p>
 
 <p align="center">&nbsp;</p>
