--- a/Friends.htm
+++ b/Friends.htm
@@ -10,10 +10,20 @@
 <p align="center"><font face="Consolas" size="7">Dear my Friends</font></p>
 <p align="center"><font size="5" face="Consolas">
 <!--webbot bot="Navigation" S-Type="sequence" S-Orientation="horizontal" S-Rendering="graphics" B-Include-Home="FALSE" B-Include-Up="FALSE" U-Page="sid:1001" S-Theme="zt 0000" startspan --><nobr>[&nbsp;<a href="index.html" target="">Bj2002</a>&nbsp;]</nobr>  <nobr>[&nbsp;<a href="Music.htm" target="">来点音乐</a>&nbsp;]</nobr>  <nobr>[&nbsp;Dear&nbsp;My&nbsp;Friends&nbsp;]</nobr><!--webbot bot="Navigation" i-checksum="8054" endspan --></font></p>
-<div style="position: absolute; width: 100%; height: 100px; z-index: 1; left: 29px; top: 145px" id="layer1">
-	<p align="justify"><font size="5" face="宋体">特别期待的动画电影《你好世界》</font></p>
-	<p align="justify">
-	<img id="imgPicture" src="https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0=baike272,5,5,272,90/sign=7058d4f55eda81cb5aeb8b9f330fbb73/4afbfbedab64034fa5c6fe07a0c379310a551da3.jpg" onload="imageResize()" style="visibility: visible; width: 595px; height: 842px; margin-top: 0px; display: inline-block;" url="https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike272%2C5%2C5%2C272%2C90/sign=7058d4f55eda81cb5aeb8b9f330fbb73/4afbfbedab64034fa5c6fe07a0c379310a551da3.jpg"></p>
+<div style="position: absolute; width: 1700px; height: 3330px; z-index: 1; left: 29px; top: 145px" id="layer1">
+	<blockquote>
+		<p align="justify">&nbsp;</p>
+		<p align="justify"><font face="宋体" size="5">谢谢各位！</font></p>
+		<p align="justify"><font face="宋体" size="5">收到了常的横格本。</font></p>
+		<p align="justify">
+		<img border="0" src="Friend3.jpg" width="1610" height="917"></p>
+	</blockquote>
+	<p align="justify">&nbsp;</p>
+	<blockquote>
+		<p align="justify"><font size="5" face="宋体">特别期待的动画电影《你好世界》和《天气之子》</font></p>
+		<p align="justify">
+		<img border="0" src="F4.jpg" width="268" height="375"><img border="0" src="F5.jpg" width="268" height="375"></p>
+	</blockquote>
 	<p align="justify">&nbsp;</p>
 	<p align="justify"><font size="4"><a href="SLYZ.pdf">【胜利一中2018级机房人物列传】</a></font></p>
 	<p align="justify">&nbsp;</p>
