--- a/_vti_cnf/Friends.htm
+++ b/_vti_cnf/Friends.htm
@@ -1,20 +1,20 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|23 Oct 2019 13:46:58 -0000
+vti_timelastmodified:TR|24 Oct 2019 11:44:04 -0000
 vti_timecreated:TR|21 Oct 2019 11:44:29 -0000
 vti_title:SR|Dear my Friends
 vti_extenderversion:SR|6.0.2.5516
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|23 Oct 2019 13:11:25 -0000
+vti_nexttolasttimemodified:TW|24 Oct 2019 11:41:07 -0000
 vti_shadowfiles:VX|_derived/Friends.htm_cmp_ice000_hbtn.gif
 vti_structuredtm:TR|22 Oct 2019 11:33:23 -0000
-vti_cacheddtm:TX|23 Oct 2019 13:46:58 -0000
-vti_filesize:IR|1984
+vti_cacheddtm:TX|24 Oct 2019 11:44:04 -0000
+vti_filesize:IR|2009
 vti_cachedtitle:SR|Dear my Friends
 vti_cachedbodystyle:SR|<body bgcolor="#CCFFCC">
-vti_cachedlinkinfo:VX|S|https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0=baike272,5,5,272,90/sign=7058d4f55eda81cb5aeb8b9f330fbb73/4afbfbedab64034fa5c6fe07a0c379310a551da3.jpg H|SLYZ.pdf S|Friend1.jpg S|731$27AXD[@)$Z}P)9]I~QL.jpg S|Friend2.jpg
-vti_cachedsvcrellinks:VX|NSSS|https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0=baike272,5,5,272,90/sign=7058d4f55eda81cb5aeb8b9f330fbb73/4afbfbedab64034fa5c6fe07a0c379310a551da3.jpg FHUS|SLYZ.pdf FSUS|Friend1.jpg FSUS|731$27AXD[@)$Z}P)9]I~QL.jpg FSUS|Friend2.jpg
+vti_cachedlinkinfo:VX|S|Friend3.jpg S|F4.jpg S|F5.jpg H|SLYZ.pdf S|Friend1.jpg S|731$27AXD[@)$Z}P)9]I~QL.jpg S|Friend2.jpg
+vti_cachedsvcrellinks:VX|FSUS|Friend3.jpg FSUS|F4.jpg FSUS|F5.jpg FHUS|SLYZ.pdf FSUS|Friend1.jpg FSUS|731$27AXD[@)$Z}P)9]I~QL.jpg FSUS|Friend2.jpg
 vti_cachedneedsrewrite:BR|true
 vti_cachedhasbots:BR|true
 vti_cachedhastheme:BR|false
