--- a/Friends.htm
+++ b/Friends.htm
@@ -18,15 +18,15 @@
 		<p align="justify">
 		<img border="0" src="Friend3.jpg" width="1610" height="917"></p>
 	</blockquote>
-	<p align="justify">&nbsp;</p>
+	<hr>
 	<blockquote>
 		<p align="justify"><font size="5" face="宋体">特别期待的动画电影《你好世界》和《天气之子》</font></p>
 		<p align="justify">
 		<img border="0" src="F4.jpg" width="268" height="375"><img border="0" src="F5.jpg" width="268" height="375"></p>
 	</blockquote>
-	<p align="justify">&nbsp;</p>
+	<hr align="justify">
 	<p align="justify"><font size="4"><a href="SLYZ.pdf">【胜利一中2018级机房人物列传】</a></font></p>
-	<p align="justify">&nbsp;</p>
+	<hr>
 	<p align="justify">录音笔是个好东西（发现远古录音的Bj2002）</p>
 	<p>
 	<img border="0" src="Friend1.jpg"></p>
