--- a/_vti_cnf/Friends.htm
+++ b/_vti_cnf/Friends.htm
@@ -1,27 +1,31 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|24 Oct 2019 11:56:28 -0000
+vti_timelastmodified:TR|09 Nov 2019 07:53:14 -0000
 vti_timecreated:TR|21 Oct 2019 11:44:29 -0000
 vti_title:SR|Dear my Friends
 vti_extenderversion:SR|6.0.2.5516
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|24 Oct 2019 11:44:04 -0000
+vti_nexttolasttimemodified:TW|09 Nov 2019 07:53:01 -0000
 vti_shadowfiles:VX|_derived/Friends.htm_cmp_ice000_hbtn.gif
 vti_structuredtm:TR|22 Oct 2019 11:33:23 -0000
-vti_cacheddtm:TX|24 Oct 2019 11:56:28 -0000
-vti_filesize:IR|1950
+vti_thicketdir:SW|Friends.files
+vti_cacheddtm:TX|09 Nov 2019 07:53:14 -0000
+vti_filesize:IR|28388
 vti_cachedtitle:SR|Dear my Friends
-vti_cachedbodystyle:SR|<body bgcolor="#CCFFCC">
-vti_cachedlinkinfo:VX|S|Friend3.jpg S|F4.jpg S|F5.jpg H|SLYZ.pdf S|Friend1.jpg S|731$27AXD[@)$Z}P)9]I~QL.jpg S|Friend2.jpg
-vti_cachedsvcrellinks:VX|FSUS|Friend3.jpg FSUS|F4.jpg FSUS|F5.jpg FHUS|SLYZ.pdf FSUS|Friend1.jpg FSUS|731$27AXD[@)$Z}P)9]I~QL.jpg FSUS|Friend2.jpg
+vti_cachedbodystyle:SR|<body bgcolor="#CCFFCC" lang=ZH-CN link=#0000FF vlink=#800080 style='tab-interval:  21.0pt'>
+vti_cachedlinkinfo:VX|H|Friends.files/editdata.mso H|Friends.files/themedata.thmx H|Friends.files/colorschememapping.xml S|Friend3.jpg S|F4.jpg S|F5.jpg H|https://bj2002.github.io/SLYZ_release.pdf S|Friend1.jpg S|731$27AXD[@)$Z}P)9]I~QL.jpg S|Friend2.jpg
+vti_cachedsvcrellinks:VX|NHUS|Friends.files/editdata.mso FHUS|Friends.files/themedata.thmx FHUS|Friends.files/colorschememapping.xml FSUS|Friend3.jpg FSUS|F4.jpg FSUS|F5.jpg NHSS|https://bj2002.github.io/SLYZ_release.pdf FSUS|Friend1.jpg FSUS|731$27AXD[@)$Z}P)9]I~QL.jpg FSUS|Friend2.jpg
 vti_cachedneedsrewrite:BR|true
 vti_cachedhasbots:BR|true
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
 vti_botnavbits:SW|
 vti_botlinkbars:VW|S|sid:1001
-vti_botnavbarthemes:VR|zt
+vti_botnavbarthemes:VR|
 vti_botnavbarfeatures:VR|t s
-vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8 ProgId Word.Document Generator Microsoft\\ Word\\ 12 Originator Microsoft\\ Word\\ 12
 vti_charset:SR|utf-8
+vti_originator:SR|Microsoft Word 12
+vti_progid:SR|Word.Document
+vti_generator:SR|Microsoft Word 12
