--- a/_vti_cnf/index.html
+++ b/_vti_cnf/index.html
@@ -1,17 +1,17 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|24 Oct 2019 11:55:07 -0000
+vti_timelastmodified:TR|27 Oct 2019 09:52:37 -0000
 vti_timecreated:TR|21 Oct 2019 09:03:00 -0000
 vti_extenderversion:SR|6.0.2.5516
 vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|24 Oct 2019 11:54:59 -0000
+vti_nexttolasttimemodified:TW|27 Oct 2019 09:44:18 -0000
 vti_structuredtm:TR|21 Oct 2019 09:08:15 -0000
 vti_shadowfiles:VX|
 vti_linkbars:VW|S|sid:1001
 vti_title:SR|Bj2002
-vti_cacheddtm:TX|24 Oct 2019 11:55:07 -0000
-vti_filesize:IR|2955
+vti_cacheddtm:TX|27 Oct 2019 09:52:37 -0000
+vti_filesize:IR|2953
 vti_cachedtitle:SR|Bj2002
 vti_cachedbodystyle:SR|<body bgcolor="#CCFFCC">
 vti_cachedlinkinfo:VX|H|https://www.zhihu.com/people/bai-jun-37-67/activities K|https://music.163.com/ H|mailto:@https://space.bilibili.com/114025394 H|https://www.luogu.org/space/show S|Head.jpg
@@ -22,7 +22,7 @@ vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
 vti_botnavbits:SW|
 vti_botlinkbars:VW|S|sid:1001
-vti_botnavbarthemes:VR|zt
+vti_botnavbarthemes:VR|
 vti_botnavbarfeatures:VR|t s
 vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
 vti_charset:SR|utf-8
