--- a/_vti_cnf/player.htm
+++ b/_vti_cnf/player.htm
@@ -1,21 +1,19 @@
 vti_encoding:SR|utf8-nl
-vti_author:SR|jsa9\\Administrator
-vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|22 Oct 2019 11:33:35 -0000
-vti_timecreated:TR|21 Oct 2019 11:39:27 -0000
-vti_title:SR|网易云音乐
-vti_extenderversion:SR|6.0.2.5516
-vti_backlinkinfo:VX|
-vti_nexttolasttimemodified:TW|22 Oct 2019 03:35:14 -0000
-vti_cacheddtm:TX|22 Oct 2019 03:35:14 -0000
-vti_filesize:IR|5719
+vti_author:SR|DESKTOP-79KLK6B\\DELL
+vti_modifiedby:SR|DESKTOP-79KLK6B\\DELL
+vti_timelastmodified:TR|11 Feb 2021 14:31:58 -0000
+vti_timecreated:TR|11 Feb 2021 14:31:58 -0000
+vti_cacheddtm:TX|11 Feb 2021 14:31:58 -0000
+vti_filesize:IR|4892
 vti_cachedtitle:SR|网易云音乐
 vti_cachedbodystyle:SR|<body>
-vti_cachedlinkinfo:VX|Q|base.css Q|outchain-player.css S|//s3.music.126.net/web/s/core_172d3506fd39688f1606102abb4500af.js S|//s3.music.126.net/web/s/pt_outchain_player_5437bf86a729640aabfd289f187b4d83.js
-vti_cachedsvcrellinks:VX|FQUS|base.css FQUS|outchain-player.css NSUS|//s3.music.126.net/web/s/core_172d3506fd39688f1606102abb4500af.js NSUS|//s3.music.126.net/web/s/pt_outchain_player_5437bf86a729640aabfd289f187b4d83.js
+vti_cachedlinkinfo:VX|Q|//s5.music.126.net/static_public/5f040ccb0696071dab793a9d/outchain-base.css Q|//s5.music.126.net/static_public/5f040ccb0696071dab793a9d/outchain-player.css S|//s3.music.126.net/web/s/core_68ac1b3aadf40a20caba599a0ab2365d.js S|//s3.music.126.net/web/s/pt_outchain_player_c01f519eac891510d509d80e5d62ec57.js
+vti_cachedsvcrellinks:VX|NQUS|//s5.music.126.net/static_public/5f040ccb0696071dab793a9d/outchain-base.css NQUS|//s5.music.126.net/static_public/5f040ccb0696071dab793a9d/outchain-player.css NSUS|//s3.music.126.net/web/s/core_68ac1b3aadf40a20caba599a0ab2365d.js NSUS|//s3.music.126.net/web/s/pt_outchain_player_c01f519eac891510d509d80e5d62ec57.js
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
-vti_charset:SR|utf-8
+vti_charset:SR|gb2312
+vti_title:SR|网易云音乐
+vti_extenderversion:SR|6.0.2.5516
+vti_backlinkinfo:VX|
