--- a/P2.htm
+++ b/P2.htm
@@ -8,7 +8,7 @@
 
 <p>
 <a href="P3.htm">
-<img border="0" src="_vti_cnf/P2.PNG" width=100% height=100%></a></p>
+<img border="0" src="P2.PNG" width=100% height=100%></a></p>
 
 </body>
 
