--- a/P3.htm
+++ b/P3.htm
@@ -8,7 +8,7 @@
 
 <p>
 <a href="P4.htm">
-<img border="0" src="_vti_cnf/P3.PNG" width=100% height=100%></a></p>
+<img border="0" src="P3.PNG" width=100% height=100%></a></p>
 
 </body>
 
