--- a/P5.htm
+++ b/P5.htm
@@ -8,7 +8,7 @@
 
 <p>
 <a href="P6.htm">
-<img border="0" src="_vti_cnf/P5.PNG" width=100% height=100%></a></p>
+<img border="0" src="P5.PNG" width=100% height=100%></a></p>
 
 </body>
 
